# in_place_fastx

./: .gitignore  Cargo.toml  Readme.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml  msrv.yml
benches/: kmer_count.rs
doc/: benchmark.ipynb
evaluation/: benchmark.ipynb  makefile
examples/: fqchk_bio.rs  fqchk_ipf.rs  fqchk_needletail.rs  fqchk_utils.rs  kmer_count.rs  parallel_kmer_count.rs
examples_bkp/: parallel_kmer_count.rs
fastmap/: all.html  index.html  sidebar-items.js
fastmap/error/: enum.Error.html  index.html  type.Result.html
fastmap/fastq/: index.html  sidebar-items.js  trait.Parser.html  type.BlockWorker.html  type.Record.html  type.RecordWorker.html
fastmap/fastq/block/: index.html  sidebar-items.js  struct.Producer.html  struct.Reader.html  type.Block.html
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/in_place_fastx/block/: trait.Producer.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  (+1 more)
in_place_fastx/: all.html  constant.DEFAULT_BLOCKSIZE.html  index.html  macro.fasta_sequential!.html  macro.fasta_sequential.html  macro.fasta_sharedstate!.html  macro.fasta_sharedstate.html  macro.fastq_sequential!.html  macro.fastq_sequential.html  macro.fastq_sharedstate!.html  macro.fastq_sharedstate.html  macro.impl_producer!.html  macro.impl_producer.html  macro.impl_reader!.html  macro.impl_reader.html  macro.impl_sequential!.html  macro.impl_sequential.html  macro.impl_sharedstate!.html  macro.impl_sharedstate.html  sidebar-items.js
in_place_fastx/block/: index.html  sidebar-items.js  struct.Block.html  struct.Record.html  trait.AbcProducer.html  trait.Producer.html  trait.Reader.html
in_place_fastx/error/: enum.Error.html  index.html  type.Result.html
in_place_fastx/fasta/: index.html  sidebar-items.js  struct.Producer.html  struct.Reader.html  struct.Record.html
in_place_fastx/fastq/: index.html  sidebar-items.js  struct.Block.html  struct.Producer.html  struct.Reader.html  struct.Record.html  trait.Parser.html  type.BlockWorker.html  type.Record.html  type.RecordWorker.html
in_place_fastx/parser/: index.html  sidebar-items.js
src/: block.rs  error.rs  fasta.rs  fastq.rs  lib.rs
src/fasta/: block.rs  mod.rs
src/fastmap/: error.rs.html  lib.rs.html
src/fastq/: block.rs  mod.rs
src/in_place_fastx/: block.rs.html  error.rs.html  fasta.rs.html  fastq.rs.html  lib.rs.html
src/parser/: mod.rs  sequential.rs  shared_state.rs
(+39 files in other folders)
