[package]
name = "fastmap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap    = "0.7"
rayon     = "1"
bstr      = "0.2"

log          = "0.4"
env_logger   = "0.9"
thiserror    = "1"

[dev-dependencies]
test-env-log = "0.2"

tempfile = "3"
rand = "0.8"