[package]
name = "in_place_fastx"
version = "0.1.0"
edition = "2018"

description = "A fastx parser based on memory mapping, allow multithreading"

homepage = "https://github.com/natir/in_place_fastx"
repository = "https://github.com/natir/in_place_fastx"
documentation = "https://natir.github.io/in_place_fastx/in_place_fastx"

readme = "Readme.md"
license-file = "LICENSE"

keywords = ["bioinformatics", "parser", "fasta", "fastq"]

publish = false # this crate haven't his place in crates.io


[dependencies]
memmap     = "0.7"
rayon      = "1"
bstr       = "0.2"

log        = "0.4"
env_logger = "0.9"
thiserror  = "1"


[dev-dependencies]
# test dependencie
tempfile   = "3"
rand       = "0.8"

# example dependencie
clap       = "3.0.0-beta.2"
lazy_static = "1"

# bench dependencie
criterion  = "0.3"
cocktail   = { git = "https://github.com/natir/cocktail.git" }
bio        = "0.37"
needletail = "0.4"


[profile.release]
debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[[bench]]
name = "kmer_count"
harness = false
